updated headline and resume

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <li data-bs-dismiss="offcanvas"><a href="#skills">Skills</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#project">Projects</a></li>
                         <li data-bs-dismiss="offcanvas"><a  href="#contact">Contact</a></li>
-                        <li data-bs-dismiss="offcanvas"><a href="./images/resume/sourabh_bundele.pdf" download>Resume</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="./images/resume/Sourabh Bundele-cap02_009-Algorithm Developer Intern.pdf" download>Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#project">Project</a></li>
                             <li><a href="#contact">Contact</a></li>
-                            <li><a href="./images/resume/sourabh_bundele.pdf" target="_blank">Resume</a></li>
+                            <li><a href="./images/resume/Sourabh Bundele-cap02_009-Algorithm Developer Intern.pdf" target="_blank">Resume</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="intro">
                     <h1 class="mb-0">
                         I am Sourabh Bundele
-                        <span class="mt-1">Algorithmic Developer</span>
+                        <span class="mt-1">Aspiring Full Stack Developer</span>
                     </h1>
                     <div class="resume mt-4">
                         <a href="./images/resume/sourabh_bundele.pdf" download><button>Resume</button></a>
