--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <span class="mt-1">Aspiring Full Stack Developer</span>
                     </h1>
                     <div class="resume mt-4">
-                        <a href="./images/resume/sourabh_bundele.pdf" download><button>Resume</button></a>
+                        <a href="./images/resume/Sourabh Bundele-cap02_009-Algorithm Developer Intern.pdf" download><button>Resume</button></a>
                     </div>
                 </div>
             </div>
