--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="mobile-nav">
                 
                 <div class="mobile-logo">
-                    <h1>Sourabh Bundele</h1>
+                    <h1>SB</h1>
                 </div>
 
                 <!-- <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button> -->
@@ -34,7 +34,7 @@
             </div>
             <div class="off-canvas bg-dark text-white offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                 <div class="offcanvas-header">
-                    <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Sourabh Bundele</h2>
+                    <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">SB</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
@@ -44,7 +44,7 @@
                         <li data-bs-dismiss="offcanvas"><a href="#skills">Skills</a></li>
                         <li data-bs-dismiss="offcanvas"><a href="#project">Projects</a></li>
                         <li data-bs-dismiss="offcanvas"><a  href="#contact">Contact</a></li>
-                        <li data-bs-dismiss="offcanvas"><a href="./images/resume/Sourabh Bundele-cap02_009-Algorithm Developer Intern.pdf" download>Resume</a></li>
+                        <li data-bs-dismiss="offcanvas"><a href="./images/resume/Sourabh_Bundele-Algorithm Developer.pdf" download>Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#project">Project</a></li>
                             <li><a href="#contact">Contact</a></li>
-                            <li><a href="./images/resume/Sourabh Bundele-cap02_009-Algorithm Developer Intern.pdf" target="_blank">Resume</a></li>
+                            <li><a href="./images/resume/Sourabh_Bundele-Algorithm Developer.pdf" target="_blank">Resume</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,10 +78,10 @@
                 <div class="intro">
                     <h1 class="mb-0">
                         I am Sourabh Bundele
-                        <span class="mt-1">Aspiring Full Stack Developer</span>
+                        <span class="mt-1">Algorithm Developer</span>
                     </h1>
                     <div class="resume mt-4">
-                        <a href="./images/resume/Sourabh Bundele-cap02_009-Algorithm Developer Intern.pdf" download><button>Resume</button></a>
+                        <a href="./images/resume/Sourabh_Bundele-Algorithm Developer.pdf" download><button>Resume</button></a>
                     </div>
                 </div>
             </div>
@@ -152,6 +152,13 @@
                                 <p class="text-center">Python</p>
                             </figcaption>
                         </figure>
+
+                        <figure class="tech dsa">
+                            <img class="img-fluid" src="./images/datastructure2.png" alt="DSA logo">
+                            <figcaption>
+                                <p class="text-center">DSA</p>
+                            </figcaption>
+                        </figure>
                     </div>
                     <h3 class="mt-3">2. Tools</h3>
                     <div class="flexBox mt-4">
@@ -190,13 +197,17 @@
                     <h3>1. HTML/CSS</h3>
                     <div class="html-project mt-4">
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/bakery.png" alt="Bakery template Home Image">
                             </div>
                             <div class="card-content">
                                 <h4>Bakery</h4>
-                                <p class="mb-0">A website template based on Bakery Products cloned of one of colorlib templates <span class="d-block fw-bold pt-3">Tech Stack: HTML, CSS</span></p>
+                                <ul class="mb-0 px-3">
+                                    <li>Replicated the design and layout of a bakery website template sourced from Colorlib using HTML and CSS</li>
+                                    <li>Employed CSS techniques such as flexbox, grid layout, and media queries to create a user-friendly browsing experience</li> 
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> HTML, CSS</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Bakery">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/bakery/">Preview</a>
@@ -204,13 +215,17 @@
                             </div>
                         </div>
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/gym.png" alt="Gym template Home Image">
                             </div>
                             <div class="card-content">
                                 <h4>Gym</h4>
-                                <p class="mb-0">A website template based on Gym and Fitness plans cloned of colorlib templates <span class="d-block fw-bold pt-3">Tech Stack: HTML, CSS</span></p>
+                                <ul class="mb-0 px-3">
+                                    <li>Recreated the design and structure of a gym website template sourced from Colorlib using HTML and CSS</li>
+                                    <li>Employed HTML to structure the website's content, including sections for home, classes, trainers, pricing, and contact</li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> HTML, CSS</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Gym">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/gym/">Preview</a>
@@ -218,13 +233,17 @@
                             </div> 
                         </div>
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/hotel.png" alt="Hotel template Home Image">
                             </div>
                             <div class="card-content">
                                 <h4>Hotel</h4>
-                                <p class="mb-0">A website template that showcase hotel rooms and its prices with photos of room <span class="d-block fw-bold pt-3">Tech Stack: HTML, CSS</span></p>
+                                <ul class="mb-0 px-3">
+                                    <li>Replicated the layout and design of a hotel website template sourced from Colorlib using HTML and CSS</li>
+                                    <li>Included sections for room listings, room details, pricing tables, and booking options, while integrating CSS for styling and responsive site</li> 
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> HTML, CSS</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Hotel">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/hotel/">Preview</a>
@@ -232,13 +251,17 @@
                             </div>
                         </div>
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/cars.png" alt="Garage template Home Image">
                             </div>
                             <div class="card-content">
                                 <h4>Cars</h4>
-                                <p class="mb-0">A website that shows prices of various models with its features and specification <span class="d-block fw-bold pt-3">Tech Stack: HTML, CSS</span></p>
+                                <ul class="mb-0 px-3">
+                                    <li>Developed a responsive HTML and CSS template based on a design sourced from Colorlib</li>
+                                    <li>Implemented CSS for styling elements such as fonts, and media queries to ensure optimal viewing experience across different devices.</li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> HTML, CSS</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/Sourabh0318/Portfolio/tree/main/templates/Garage">Source Code</a>
                                     <a href="https://sourabhb03-portfolio.netlify.app/templates/garage/">Preview</a>
@@ -257,81 +280,87 @@
                             </div>
                             <div class="card-content">
                                 <h4>Maze Solver</h4>
-                                <p class="mb-0">
-                                    A CLI app that displays a maze and helps us find the path in the maze or generate a new maze of any given size.
-                                    <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
-                                </p>
+                                <ul class="mb-0 px-3">
+                                    <!-- <li> The project includes a function to generate a random maze of a specified size, with a certain percentage of walls.</li> -->
+                                    <li>The project implements a pathfinding algorithm, such as depth-first search (DFS).</li>
+                                    <li>The project has user interaction, allowing users to print the path, generate another puzzle or exit the game.</li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> Python</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Maze_Solver">Source Code</a>
-                                    <a href="./projects/maze.html" target="_blank">Demo</a>
+                                    <!-- <a href="./projects/maze.html" target="_blank">Demo</a> -->
                                 </div>
                             </div>
                         </div>
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/weather.png" alt="image of clouds and mountains">
                             </div>
                             <div class="card-content">
                                 <h4>Weather App</h4>
-                                <p class="mb-0">
-                                    A CLI app that fetches the weather data from open weather API using request module and display it on the terminal.
-                                    <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
-                                </p>
+                                <ul class="mb-0 px-3">
+                                    <li>Developed a weather application leveraging the OpenWeather API to fetch real-time weather data for specified cities.</li>
+                                    <li>Implemented a command-line interface(CLI) to display the current temperature of user-selected cities</li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> Python</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Weather_App">Source Code</a>
-                                    <a href="./projects/weather.html" target="_blank">Demo</a>
+                                    <!-- <a href="./projects/weather.html" target="_blank">Demo</a> -->
                                 </div>
                             </div>
                         </div>
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/typing.png" alt="keyboard image">
                             </div>
                             <div class="card-content">
                                 <h4>Typing_Test_App</h4>
-                                <p class="mb-0">
-                                    A CLI app that test your typing speed and accuracy and maintain a leaderboard that will help you to compare your speed with others.
-                                    <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
-                                </p>
+                                <ul class="mb-0 px-3">
+                                    <li>A CLI app in Python, where users can input username, options to start typing test, view leaderboard, or exit app.</li>
+                                    <li>It measure typing speed in words per minute (WPM), and update json file/display the leaderboard with user scores.</li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> Python</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Typing_Master">Source Code</a>
-                                    <a href="./projects/typing-text.html" target="_blank">Demo</a>
+                                    <!-- <a href="./projects/typing-text.html" target="_blank">Demo</a> -->
                                 </div>
                             </div>
                         </div>
                         
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/ytube.png" alt="youtube logo in mobile phone">
                             </div>
                             <div class="card-content">
                                 <h4>Youtube_Downloader</h4>
-                                <p class="mb-0">
-                                    A CLI app that will help you to download youtube video or audio simply by providing the youtube video link in the terminal.
-                                    <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
-                                </p>
+                                <ul class="mb-0 px-3">
+                                    <li>Constructed a Python application utilizing the Pytube library to facilitate the downloading of YouTube videos</li>
+                                    <li>A user-friendly interface allowing users to input video URLs and choose between downloading the video in MP4 format or the audio </li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> Python</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Youtube_Music_Downloader">Source Code</a>
-                                    <a href="./projects/youtube.html" target="_blank">Demo</a>
+                                    <!-- <a href="./projects/youtube.html" target="_blank">Demo</a> -->
                                 </div>
                             </div>
                         </div>
 
-                        <div class="cards col-12">
+                        <div class="cards">
                             <div class="card-img">
                                 <img class="img-fluid" src="./images/insta.png" alt="instagram logo">
                             </div>
                             <div class="card-content">
                                 <h4>Instagram Downloader</h4>
-                                <p class="mb-0">
-                                    A CLI app that will help you to download Instagram Latest Post simply by providing the insta username in the terminal.
-                                    <span class="d-block fw-bold pt-3">Tech Stack: Python</span>
-                                </p>
+                                <ul class="mb-0 px-3">
+                                    <li>Developed a Python application leveraging the Instaloader library to enable users to download the latest posts</li>
+                                    <li>Implemented a user-friendly interface allowing users to input the Instagram username of the desired user</li>
+                                    <span class="d-block pt-3"><span class="fw-bold">Tech Stack:</span> Python</span>
+                                </ul>
                                 <div class="btns">
                                     <a href="https://github.com/SBundele/Instagram-post-download">Source Code</a>
-                                    <a href="./projects/instagram.html" target="_blank">Demo</a>
+                                    <!-- <a href="./projects/instagram.html" target="_blank">Demo</a> -->
                                 </div>
                             </div>
                         </div>
